# kanari-L2

./: Cargo.toml  README.md  VALIDATOR_README.md
.cargo/: config.toml
.github/workflows/: check_build_test.yml  deploy_examples.yml  deploy_mainnet.yml  deploy_testnet.yml  docker_build.yml  homebrew.yml  linux_macos_release.yml  release_asset.yml  sdk  sdk.yml  win-sdk.yml  windows.yml  windows_release.yml
config/: prometheus.yml  validator.yaml.template
crates/bitcoin-client/src/: lib.rs
crates/data_verify/: Cargo.toml  README.md
crates/data_verify/src/: brc20_helper.rs  config.rs  data_export.rs  inscription.rs  kanari_client.rs  lib.rs  main.rs  ord_verify.rs
crates/data_verify/tests/: tests.rs
crates/kanari/: Cargo.toml  build.rs
crates/kanari-anomalies/: Cargo.toml  README.md
crates/kanari-anomalies/src/: lib.rs
crates/kanari-benchmarks/: Cargo.toml  README.md
crates/kanari-benchmarks/benches/: bench_indexer.rs  bench_smt.rs  bench_tx_exec.rs  bench_tx_sequence.rs  bench_tx_validate.rs  bench_utils.rs
crates/kanari-benchmarks/src/: config.rs  indexer.rs  lib.rs  smt.rs  tx.rs  tx_exec.rs
crates/kanari-common/: Cargo.toml  README.md
crates/kanari-common/src/: lib.rs
crates/kanari-config/: Cargo.toml
crates/kanari-config/src/: config.rs  da_config.rs  lib.rs  proposer_config.rs  server_config.rs  settings.rs  store_config.rs
crates/kanari-cosmwasm-vm/: Cargo.toml
crates/kanari-cosmwasm-vm/src/: backend.rs  lib.rs
crates/kanari-da/: Cargo.toml  README.md
crates/kanari-da/docs/: stream.md
crates/kanari-da/src/: lib.rs
crates/kanari-db/: Cargo.toml
crates/kanari-db/src/: lib.rs
crates/kanari-executor/: Cargo.toml
crates/kanari-executor/src/: lib.rs  metrics.rs
crates/kanari-faucet/: Cargo.toml
crates/kanari-faucet/src/: app.rs  discord.rs  errors.rs  faucet.rs  faucet_module.rs  faucet_proxy.rs  invitation_module.rs  lib.rs  metrics.rs  metrics_layer.rs  requests.rs  responses.rs  server.rs  tweet_fetcher_module.rs  tweet_v2_module.rs  twitter_account_module.rs  web.rs
crates/kanari-framework-tests/: Cargo.toml  README.md
crates/kanari-framework-tests/src/: bbn_tx_loader.rs  binding_test.rs  bitcoin_block_tester.rs  lib.rs  main.rs
crates/kanari-framework-tests/tests/: tests.rs
crates/kanari-genesis/: Cargo.toml  README.md
crates/kanari-genesis/released/: main
crates/kanari-genesis/src/: lib.rs  main.rs
crates/kanari-indexer/: Cargo.toml
crates/kanari-indexer/src/: errors.rs  indexer_reader.rs  lib.rs  metrics.rs  schema.rs  utils.rs
crates/kanari-integration-test-runner/: Cargo.toml
crates/kanari-integration-test-runner/src/: lib.rs
crates/kanari-integration-test-runner/tests/: tests.rs
crates/kanari-key/: Cargo.toml
crates/kanari-key/src/: key_derive.rs  keypair_file.rs  lib.rs
crates/kanari-notify/: Cargo.toml
crates/kanari-notify/src/: actor.rs  event.rs  lib.rs  messages.rs  proxy.rs  streamer.rs  subscription_handler.rs  subscription_handler_tests.rs
crates/kanari-open-rpc/: Cargo.toml
crates/kanari-open-rpc-macros/: Cargo.toml
crates/kanari-open-rpc-macros/src/: lib.rs
crates/kanari-open-rpc-spec/: Cargo.toml  build.rs
crates/kanari-open-rpc-spec-builder/: Cargo.toml
crates/kanari-open-rpc-spec-builder/src/: examples.rs  lib.rs
crates/kanari-open-rpc-spec/schemas/: openrpc.json
crates/kanari-open-rpc-spec/src/: main.rs
crates/kanari-open-rpc/src/: lib.rs
crates/kanari-oracle/: Cargo.toml
crates/kanari-oracle/src/: aggregator_stream.rs  data_process.rs  lib.rs  reporter.rs
crates/kanari-ord/: Cargo.toml
crates/kanari-ord/src/: event.rs  lib.rs  ord_client.rs
crates/kanari-pipeline-processor/: Cargo.toml
crates/kanari-pipeline-processor/src/: metrics.rs
crates/kanari-pipeline-processor/src/actor/: messages.rs  mod.rs  processor.rs
crates/kanari-pipeline-processor/src/proxy/: mod.rs
crates/kanari-proposer/: Cargo.toml
crates/kanari-proposer/src/: lib.rs  metrics.rs
crates/kanari-proposer/src/actor/: messages.rs  mod.rs  proposer.rs
crates/kanari-proposer/src/scc/: mod.rs
crates/kanari-relayer/: Cargo.toml
crates/kanari-relayer/src/: lib.rs  metrics.rs
crates/kanari-rpc-api/: Cargo.toml
crates/kanari-rpc-api/src/: lib.rs
crates/kanari-rpc-client/: Cargo.toml
crates/kanari-rpc-client/src/: client_config.rs  kanari_client.rs  lib.rs  wallet_context.rs
crates/kanari-rpc-server/: Cargo.toml
crates/kanari-rpc-server/src/: axum_router.rs  lib.rs  metrics_server.rs
crates/kanari-rpc-server/src/server/: btc_server.rs  kanari_server.rs  mod.rs
crates/kanari-rpc-server/src/service/: aggregate_service.rs  blocklist.rs  error.rs  metrics.rs  mod.rs  routing.rs  rpc_service.rs
crates/kanari-sequencer/: Cargo.toml
crates/kanari-sequencer/src/: lib.rs  messages.rs  metrics.rs
crates/kanari-sequencer/src/actor/: mod.rs  sequencer.rs
crates/kanari-sequencer/src/proxy/: mod.rs
crates/kanari-sequencer/tests/: test_sequencer.rs
crates/kanari-store/: Cargo.toml
crates/kanari-store/src/: lib.rs
crates/kanari-test-transaction-builder/: Cargo.toml
crates/kanari-test-transaction-builder/src/: lib.rs
crates/kanari-types/: Cargo.toml
crates/kanari-types/src/: address.rs  addresses.rs  authentication_key.rs  block.rs  coin_type.rs  crypto.rs  error.rs  function_arg.rs  genesis_config.rs  into_address.rs  kanari_key.rs  kanari_network.rs  kanari_signature.rs  key_struct.rs  lib.rs  multichain_id.rs  repair.rs  sequencer.rs  service_status.rs  service_type.rs  state.rs  test_utils.rs  to_bech32.rs
crates/kanari/src/: cli_types.rs  (+4 more)
crates/testsuite/: Cargo.toml  README.md
doc/: setup-node.md  validator-setup.md
docker/: Dockerfile  Dockerfile.validator  DockerfileDebug  docker-compose.validator.yml
frameworks/bitcoin-move/: Cargo.toml  Move.toml
frameworks/framework-release/: build.rs
frameworks/kanari-framework/: Cargo.toml  Move.toml
frameworks/kanari-nursery/: Cargo.toml  Move.toml  README.md
kanari-explorer/: bun.lockb  package.json
moveos/metrics/: Cargo.toml
moveos/moveos-wasm/: Cargo.toml
scripts/: setup-validator.sh
(+843 files in other folders)
