[package]
name = "kanari-faucet"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serenity = { features = [
    "client",
    "gateway",
    "rustls_backend",
    "cache",
    "model",
], workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
coerce = { workspace = true }
async-trait = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
bcs = { workspace = true }

thiserror = { workspace = true }
tokio = { features = ["full"], workspace = true }


move-core-types = { workspace = true }
moveos-types = { workspace = true }
kanari-types = { workspace = true }
kanari-rpc-client = { workspace = true }
kanari-rpc-api = { workspace = true }
hex = "0.4.3"

