[package]
name = "kanari-open-rpc-spec-builder"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kanari-rpc-api = { workspace = true }
kanari-open-rpc = { workspace = true }