[package]
name = "kanari-rpc-server"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
coerce = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
bitcoincore-rpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
hyper = { workspace = true }
tower_governor = { workspace = true }
http = { workspace = true }
pin-project = { workspace = true }

move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }

moveos-types = { workspace = true }
moveos-eventbus = { workspace = true }
raw-store = { workspace = true }
metrics = { workspace = true }

bitcoin-client = { workspace = true }
kanari-config = { workspace = true }
kanari-types = { workspace = true }
kanari-executor = { workspace = true }
kanari-sequencer = { workspace = true }
kanari-proposer = { workspace = true }
kanari-pipeline-processor = { workspace = true }
kanari-rpc-api = { workspace = true }
kanari-relayer = { workspace = true }
kanari-indexer = { workspace = true }
kanari-da = { workspace = true }
kanari-genesis = { workspace = true }
kanari-db = { workspace = true }
kanari-open-rpc = { workspace = true }
kanari-open-rpc-spec-builder = { workspace = true }
kanari-notify = { workspace = true }
kanari-store = { workspace = true }
