[package]
name = "kanari-sequencer"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
coerce = { workspace = true }
serde = { workspace = true }
tokio = { features = ["full"], workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
function_name = { workspace = true }

moveos-types = { workspace = true }
moveos-eventbus = { workspace = true }
accumulator = { workspace = true }
metrics = { workspace = true }
raw-store = { workspace = true }

kanari-types = { workspace = true }
kanari-store = { workspace = true }
kanari-config = { workspace = true }
kanari-db = { workspace = true }
kanari-genesis = { workspace = true }
kanari-notify = { workspace = true }